# Thesis-2026

./: .gitignore  main.tex  pyproject.toml  references.bib
data/: A1_20260717_030353.csv  A2_20260717_030353.csv
firmware/: README.md
firmware/anchor/: CMakeLists.txt  sdkconfig.defaults
firmware/anchor/main/: CMakeLists.txt  Kconfig.projbuild  anchor_config.h  csv_out.c  csv_out.h  main.c  sniffer.c  sniffer.h  udp_out.c  udp_out.h  wifi_conn.c  wifi_conn.h
firmware/anchor_arduino/: anchor_arduino.ino
firmware/anchor_arduino/anchor2_arduino/: anchor2_arduino.ino
firmware/tools/: gateway_logger.py
firmware/tools/matlab/: multiRawCSIpreprocess.m  rawCSIpreprocess.m  realtime_csi_dashboard.m
gateway/: __init__.py  __main__.py  csi.py  devices.example.yaml  devices.py  features.py  io.py  parser.py  preprocess.py  records.py  rssi.py  synth.py  windowing.py
journal/: 20260713.md  20260717.md  README.md
sections/: appendix.tex  introduction.tex  methodology.tex  rrl.tex  summary.tex
tests/: conftest.py  test_csi.py  test_devices.py  test_end_to_end.py  test_parser.py  test_rssi.py  test_windowing.py
