[project]
name = "gateway"
version = "0.1.0"
description = "Gateway preprocessing pipeline for the hybrid RSSI-CSI localization thesis"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
parquet = ["pandas>=1.4", "pyarrow>=8"]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
